--- a/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
+++ b/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
@@ -135,12 +135,14 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Display.cpp" />
+    <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Display.h" />
+    <ClInclude Include="src\Input.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\Shader.h" />
     <ClInclude Include="src\Transform.h" />
