--- a/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj.filters
+++ b/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\demos\SandboxDemo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Display.h">
@@ -57,6 +60,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\demos\Demo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\demos\SandboxDemo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
