Gouraud shading occuring in vertex shader

--- a/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj.filters
+++ b/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="src\demos\SandboxDemo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\demos\NormalSphereDemo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\demos\GouraudDemo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Display.h">
@@ -66,6 +72,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\demos\SandboxDemo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\demos\NormalSphereDemo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\demos\GouraudDemo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
