--- a/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
+++ b/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
@@ -135,6 +135,8 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\demos\GouraudDemo.cpp" />
+    <ClCompile Include="src\demos\NormalSphereDemo.cpp" />
     <ClCompile Include="src\demos\SandboxDemo.cpp" />
     <ClCompile Include="src\Display.cpp" />
     <ClCompile Include="src\Input.cpp" />
@@ -145,6 +147,8 @@
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\demos\Demo.h" />
+    <ClInclude Include="src\demos\GouraudDemo.h" />
+    <ClInclude Include="src\demos\NormalSphereDemo.h" />
     <ClInclude Include="src\demos\SandboxDemo.h" />
     <ClInclude Include="src\Display.h" />
     <ClInclude Include="src\Input.h" />
