--- a/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
+++ b/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
@@ -157,6 +157,10 @@
     <ClInclude Include="src\Transform.h" />
     <ClInclude Include="src\VertexBufferLayout.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shaders\Test.frag" />
+    <None Include="res\shaders\Test.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
