--- a/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj.filters
+++ b/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj.filters
@@ -81,4 +81,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shaders\Test.vert" />
+    <None Include="res\shaders\Test.frag" />
+  </ItemGroup>
 </Project>
