Implemented Phong shading

--- a/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj.filters
+++ b/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\demos\GouraudDemo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\demos\PhongDemo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Display.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\demos\GouraudDemo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\demos\PhongDemo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
