--- a/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
+++ b/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\demos\GouraudDemo.cpp" />
     <ClCompile Include="src\demos\NormalSphereDemo.cpp" />
+    <ClCompile Include="src\demos\PhongDemo.cpp" />
     <ClCompile Include="src\demos\SandboxDemo.cpp" />
     <ClCompile Include="src\Display.cpp" />
     <ClCompile Include="src\Input.cpp" />
@@ -149,6 +150,7 @@
     <ClInclude Include="src\demos\Demo.h" />
     <ClInclude Include="src\demos\GouraudDemo.h" />
     <ClInclude Include="src\demos\NormalSphereDemo.h" />
+    <ClInclude Include="src\demos\PhongDemo.h" />
     <ClInclude Include="src\demos\SandboxDemo.h" />
     <ClInclude Include="src\Display.h" />
     <ClInclude Include="src\Input.h" />
