--- a/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
+++ b/Computer-Graphics-Redux/Computer-Graphics-Redux.vcxproj
@@ -139,11 +139,13 @@
     <ClCompile Include="src\demos\NormalSphereDemo.cpp" />
     <ClCompile Include="src\demos\PhongDemo.cpp" />
     <ClCompile Include="src\demos\SandboxDemo.cpp" />
+    <ClCompile Include="src\demos\TextureDemo.cpp" />
     <ClCompile Include="src\Display.cpp" />
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\Transform.cpp" />
+    <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
@@ -152,11 +154,13 @@
     <ClInclude Include="src\demos\NormalSphereDemo.h" />
     <ClInclude Include="src\demos\PhongDemo.h" />
     <ClInclude Include="src\demos\SandboxDemo.h" />
+    <ClInclude Include="src\demos\TextureDemo.h" />
     <ClInclude Include="src\Display.h" />
     <ClInclude Include="src\Input.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\Shader.h" />
     <ClInclude Include="src\Transform.h" />
+    <ClInclude Include="src\vendor\stb_image\stb_image.h" />
     <ClInclude Include="src\VertexBufferLayout.h" />
   </ItemGroup>
   <ItemGroup>
